<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea.myapp.Welcome"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        tools:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="186dp"
        android:contentDescription="@android:string/untitled"
        app:srcCompat="@drawable/hada"
        android:layout_marginStart="2dp"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        android:layout_marginLeft="-25dp"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/welcome1"
        android:textSize="24sp"
        tools:textColor="@android:color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintRight_toRightOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="-46dp"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.566" />

    <Button
        android:id="@+id/button1"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:onClick="openCameraOnClick"
        android:text="@string/nivel1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <Button
        android:id="@+id/button2"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:text="@string/nivel2"
        android:onClick="openCameraOnClick"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />


    <Button
        android:id="@+id/button3"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:text="@string/nivel3"
        android:onClick="openCameraOnClick"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>
